--- a/types/RouterInstance.html
+++ b/types/RouterInstance.html
@@ -55,7 +55,7 @@
 <h5><span class="tsd-kind-parameter">promise</span>: <span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">T</span><span class="tsd-signature-symbol">&gt;</span></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">T</span><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/wmzy/native-router-react/blob/07aaccb/src/types.ts#L50">types.ts:50</a></li></ul></aside></li></ul></li>
+<li>Defined in <a href="https://github.com/wmzy/native-router-react/blob/118e7f1/src/types.ts#L52">types.ts:52</a></li></ul></aside></li></ul></li>
 <li class="tsd-parameter">
 <h5><span class="tsd-kind-method">cancel<wbr/>All</span><span class="tsd-signature-symbol">:</span>function</h5>
 <ul class="tsd-signatures">
@@ -63,11 +63,11 @@
 <li class="tsd-description">
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/wmzy/native-router-react/blob/07aaccb/src/types.ts#L51">types.ts:51</a></li></ul></aside></li></ul></li>
+<li>Defined in <a href="https://github.com/wmzy/native-router-react/blob/118e7f1/src/types.ts#L53">types.ts:53</a></li></ul></aside></li></ul></li>
 <li class="tsd-parameter">
 <h5><code class="tsd-tag ts-flagOptional">Optional</code> <span class="tsd-kind-property">resolving</span><span class="tsd-signature-symbol">?: </span><a href="Location.html" class="tsd-signature-type tsd-kind-type-alias">Location</a></h5></li></ul></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/wmzy/native-router-react/blob/07aaccb/src/types.ts#L43">types.ts:43</a></li></ul></aside></div>
+<li>Defined in <a href="https://github.com/wmzy/native-router-react/blob/118e7f1/src/types.ts#L45">types.ts:45</a></li></ul></aside></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -90,11 +90,13 @@
 <li><a href="../functions/PrefetchLink.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>Prefetch<wbr/>Link</span></a></li>
 <li><a href="../functions/usePrefetch.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>use<wbr/>Prefetch</span></a></li>
 <li><a href="../functions/useView.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>use<wbr/>View</span></a></li>
+<li><a href="../functions/InitializableView.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>Initializable<wbr/>View</span></a></li>
 <li><a href="../functions/View.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>View</span></a></li>
 <li><a href="../functions/useData.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>use<wbr/>Data</span></a></li>
 <li><a href="../functions/useLoading.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>use<wbr/>Loading</span></a></li>
 <li><a href="../functions/useMatched.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>use<wbr/>Matched</span></a></li>
 <li><a href="../functions/defaultResolveView.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>default<wbr/>Resolve<wbr/>View</span></a></li>
+<li><a href="../functions/resolveClientView.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>resolve<wbr/>Client<wbr/>View</span></a></li>
 <li><a href="../functions/createRouter.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>create<wbr/>Router</span></a></li>
 <li><a href="../functions/Router.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>Router</span></a></li>
 <li><a href="../functions/HistoryRouter.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>History<wbr/>Router</span></a></li>
