--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <li>Page data concurrent fetch</li>
 <li>Link prefetch and preview</li>
 <li>Most unused features can be tree-shaking</li>
+<li>SSR support</li>
 </ul>
 <a id="md:install" class="tsd-anchor"></a><h2><a href="#md:install">Install</a></h2><pre><code class="language-bash"><span class="hl-0">npm</span><span class="hl-1"> </span><span class="hl-2">i</span><span class="hl-1"> </span><span class="hl-2">native-router-react</span>
 </code><button>Copy</button></pre>
